<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.kem.hotelharrisonapp.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/account_fragment" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kem.hotelharrisonapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_reserve"
        android:name="com.kem.hotelharrisonapp.ui.reserve.ReserveFragment"
        android:label="@string/title_reserve_nav"
        tools:layout="@layout/reserve_fragment" />

    <!--    <fragment-->
    <!--        android:id="@+id/navigation_dashboard"-->
    <!--        android:name="com.kem.hotelharrisonapp.ui.dashboard.DashboardFragment"-->
    <!--        android:label="@string/title_dashboard"-->
    <!--        tools:layout="@layout/fragment_dashboard" />-->

    <!--    <fragment-->
    <!--        android:id="@+id/navigation_notifications"-->
    <!--        android:name="com.kem.hotelharrisonapp.ui.notifications.NotificationsFragment"-->
    <!--        android:label="@string/title_notifications"-->
    <!--        tools:layout="@layout/fragment_notifications" />-->


    <fragment
        android:id="@+id/navigation_search"
        android:name="com.kem.hotelharrisonapp.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/search_fragment" />
    <fragment
        android:id="@+id/navigation_gps"
        android:name="com.kem.hotelharrisonapp.ui.gps.LocalizationFragment"
        android:label="@string/title_gps"
        tools:layout="@layout/localization_fragment" />
</navigation>