<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".HallActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/tv_welcome"
            android:textStyle="bold"
            android:textSize="40sp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:text="@string/tv_description"
            android:textSize="15sp" />

        <ImageView
            android:layout_marginTop="25dp"
            android:id="@+id/img_map"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:contentDescription="@string/ic_map_description" />

        <Button
            android:id="@+id/btn_map"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_searching"
            android:textColor="@color/black"
            app:backgroundTint="#FFFFFF" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_rooms"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:backgroundTint="@color/color_button"
                android:text="@string/txt_rooms"
                android:textColor="#00182F"
                tools:targetApi="lollipop"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:text="@string/txt_logging"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/color_button"
                app:strokeWidth="2dp"
                tools:targetApi="lollipop"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>