<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".RegisterActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

        <com.google.android.material.card.MaterialCardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="10dp"
                android:layout_gravity="center">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_harrinson"
                    android:background="#0D1012"
                    android:contentDescription="@string/logo_harrison"/>

        </com.google.android.material.card.MaterialCardView>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/register_title"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                app:boxBackgroundColor="#F3F3F3"
                app:boxStrokeColor="#C82323"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusTopEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="textPersonName"
                    android:hint="@string/txt_hint_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                app:boxBackgroundColor="#F3F3F3"
                app:boxStrokeColor="#C82323"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusTopEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="textPersonName"
                    android:hint="@string/txt_hint_last_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                app:boxBackgroundColor="#F3F3F3"
                app:boxStrokeColor="#C82323"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusTopEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/txt_hint_email"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                app:boxBackgroundColor="#F3F3F3"
                app:boxStrokeColor="#C82323"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusTopEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="textPassword"
                    android:hint="@string/txt_hint_password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:backgroundTint="@color/color_button"
                android:textColor="@color/black"
                android:text="@string/txt_register_register"
                tools:targetApi="lollipop"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/tv_goLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/color_button"
                app:strokeWidth="2dp"
                android:textColor="@color/black"
                android:text="@string/txt_back"
                tools:targetApi="lollipop"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>