<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.account.AccountFragment"
        android:screenOrientation="portrait">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

        <com.google.android.material.card.MaterialCardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="10dp"
                android:layout_gravity="center_horizontal">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_harrinson"
                    android:background="#0D1012"
                    android:contentDescription="@string/logo_harrison"/>

        </com.google.android.material.card.MaterialCardView>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/account_title"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif"
                    android:textSize="20sp"
                    android:hint="Nombre:"/>

            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_name_account_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"
                    android:inputType="textPersonName"
                    android:hint="@string/txt_hint_name"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif"
                    android:textSize="20sp"
                    android:hint="Apellido:"/>

            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_last_name_account_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"
                    android:inputType="textPersonName"
                    android:hint="@string/txt_hint_last_name" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif"
                    android:textSize="20sp"
                    android:hint="Email:"/>

            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_email_account_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/txt_hint_email_register"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif"
                    android:textSize="20sp"
                    android:hint="Telefono:"/>

            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_phone_account_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/txt_hint_telefono_register" />

        </LinearLayout>

        <Button
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:layout_marginBottom="70dp"
                android:layout_gravity="bottom"
                android:backgroundTint="@color/color_button"
                android:textColor="#00182F"
                android:text="@string/button_session"
                tools:targetApi="lollipop"/>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>