<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/principal" >

            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/ic_keyboard_backspace_white_24dp"
                    android:contentDescription="@string/icon_arrow"/>


            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="120dp"
                    android:layout_marginStart="120dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_notifications_24"
                    android:contentDescription="@string/icon_notification"/>

            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="170dp"
                    android:layout_marginStart="170dp"
                    android:src="@drawable/ic_baseline_login_24"
                    android:contentDescription="@string/icon_logout"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toTopOf="@id/nav_view"
            app:navGraph="@navigation/mobile_navigation" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#1A1F22"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            app:menu="@menu/bottom_nav_menu" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>